# gee-recipe-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __main__.py
app/dominio/: aoi.py  errores.py  estimador.py  receta.py
app/dominio/catalogo/: __init__.py  indices.py  kernel.py  sensores.py
app/dominio/compilador/: base.py  dialecto_js.py  dialecto_python.py
app/gee/: auth.py  config.py  descarga.py  ejecutor.py  errores.py  exportador.py
app/mapa/: _spike.py  bridge.py  preview.py  servidor.py  widget_mapa.py
app/mapa/assets/: _spike.html  index.html  mapa.js
app/scripts/: smoke_export_drive.py
app/ui/: panel_formulario.py  ventana_principal.py  visor_script.py  widget_aoi.py  widget_parametros.py  workers.py
app/ui/dialogos/: dialogo_export.py
packaging/: build.ps1  gee-recipe-builder.spec  launcher.py
scripts/: smoke_ndvi_s2.py
tests/: conftest.py  test_aoi.py  test_catalogo.py  test_compilador.py  test_dialogo_export.py  test_estimador.py  test_exportador.py  test_gee_f2.py  test_mapa.py  test_sensores.py  test_ui_smoke.py
tests/goldens/: evi_s2_drive.js  evi_s2_drive.py  kndvi_s2_preview.js  kndvi_s2_preview.py  ndvi_l7c1sr_descarga.js  ndvi_l8c1sr_descarga.js  ndvi_l8c2l2_descarga.js  ndvi_modisga_descarga.js  ndvi_modisgq_sinmascara.js  ndvi_modisq1_descarga.js  ndvi_s2_descarga.js  ndvi_s2_descarga.py  ndvi_s2_sinmascara.py
